// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal can be centered 1`] = `
<div
  class="vfm vfm--inset vfm--fixed modal"
  content-transition="[object Object]"
  data-v-2836fdb5=""
  display-directive="if"
  modal-id="modal:test"
  style="z-index: 1000;"
  teleport-to="body"
  z-index-fn="function zIndexFn() {
      /* istanbul ignore next */
      cov_mngcbfuhd().f[2]++;
      cov_mngcbfuhd().s[14]++;
      return 2000;
    }"
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm-fade"
    persisted="false"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-2836fdb5=""
    />
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm"
    persisted="false"
  >
    <div
      aria-expanded="true"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none"
      data-v-2836fdb5=""
      role="dialog"
      style=""
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-scrollable modal-dialog-centered"
        data-v-2836fdb5=""
      >
        
        <div
          class="modal-content"
          data-v-2836fdb5-s=""
        >
          <div
            class="modal-header"
            data-v-2836fdb5-s=""
          >
            <h5
              class="modal-title"
              data-v-2836fdb5-s=""
            >
              
              test modal header
              
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              data-v-2836fdb5-s=""
              type="button"
            />
          </div>
          <div
            class="modal-body"
            data-v-2836fdb5-s=""
          >
            
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            
          </div>
          <!--v-if-->
        </div>
        
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal can be large 1`] = `
<div
  class="vfm vfm--inset vfm--fixed modal"
  content-transition="[object Object]"
  data-v-2836fdb5=""
  display-directive="if"
  modal-id="modal:test"
  style="z-index: 1000;"
  teleport-to="body"
  z-index-fn="function zIndexFn() {
      /* istanbul ignore next */
      cov_mngcbfuhd().f[2]++;
      cov_mngcbfuhd().s[14]++;
      return 2000;
    }"
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm-fade"
    persisted="false"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-2836fdb5=""
    />
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm"
    persisted="false"
  >
    <div
      aria-expanded="true"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none"
      data-v-2836fdb5=""
      role="dialog"
      style=""
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-scrollable modal-lg"
        data-v-2836fdb5=""
      >
        
        <div
          class="modal-content"
          data-v-2836fdb5-s=""
        >
          <div
            class="modal-header"
            data-v-2836fdb5-s=""
          >
            <h5
              class="modal-title"
              data-v-2836fdb5-s=""
            >
              
              test modal header
              
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              data-v-2836fdb5-s=""
              type="button"
            />
          </div>
          <div
            class="modal-body"
            data-v-2836fdb5-s=""
          >
            
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            
          </div>
          <!--v-if-->
        </div>
        
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal can be small 1`] = `
<div
  class="vfm vfm--inset vfm--fixed modal"
  content-transition="[object Object]"
  data-v-2836fdb5=""
  display-directive="if"
  modal-id="modal:test"
  style="z-index: 1000;"
  teleport-to="body"
  z-index-fn="function zIndexFn() {
      /* istanbul ignore next */
      cov_mngcbfuhd().f[2]++;
      cov_mngcbfuhd().s[14]++;
      return 2000;
    }"
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm-fade"
    persisted="false"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-2836fdb5=""
    />
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm"
    persisted="false"
  >
    <div
      aria-expanded="true"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none"
      data-v-2836fdb5=""
      role="dialog"
      style=""
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-scrollable modal-sm"
        data-v-2836fdb5=""
      >
        
        <div
          class="modal-content"
          data-v-2836fdb5-s=""
        >
          <div
            class="modal-header"
            data-v-2836fdb5-s=""
          >
            <h5
              class="modal-title"
              data-v-2836fdb5-s=""
            >
              
              test modal header
              
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              data-v-2836fdb5-s=""
              type="button"
            />
          </div>
          <div
            class="modal-body"
            data-v-2836fdb5-s=""
          >
            
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            
          </div>
          <!--v-if-->
        </div>
        
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should be closable by clicking the backdrop by default 1`] = `
<div
  class="vfm vfm--inset vfm--fixed modal"
  content-transition="[object Object]"
  data-v-2836fdb5=""
  display-directive="if"
  modal-id="modal:test"
  style="z-index: 1000;"
  teleport-to="body"
  z-index-fn="function zIndexFn() {
      /* istanbul ignore next */
      cov_mngcbfuhd().f[2]++;
      cov_mngcbfuhd().s[14]++;
      return 2000;
    }"
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm-fade"
    persisted="false"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-2836fdb5=""
    />
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm"
    persisted="false"
  >
    <div
      aria-expanded="true"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none"
      data-v-2836fdb5=""
      role="dialog"
      style=""
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-scrollable"
        data-v-2836fdb5=""
      >
        
        <div
          class="modal-content"
          data-v-2836fdb5-s=""
        >
          <div
            class="modal-header"
            data-v-2836fdb5-s=""
          >
            <h5
              class="modal-title"
              data-v-2836fdb5-s=""
            >
              
              test modal header
              
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              data-v-2836fdb5-s=""
              type="button"
            />
          </div>
          <div
            class="modal-body"
            data-v-2836fdb5-s=""
          >
            
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            
          </div>
          <!--v-if-->
        </div>
        
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should be closable using the ok-text button 1`] = `
<div
  class="vfm__content modal-dialog modal-dialog-scrollable"
  data-v-2836fdb5=""
>
  
  <div
    class="modal-content"
    data-v-2836fdb5-s=""
  >
    <!--v-if-->
    <div
      class="modal-body"
      data-v-2836fdb5-s=""
    >
      
      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      
    </div>
    <div
      class="modal-footer"
      data-v-2836fdb5-s=""
    >
      <button
        class="btn btn-primary"
        data-v-2836fdb5-s=""
      >
        test OK button
      </button>
    </div>
  </div>
  
  <!--v-if-->
</div>
`;

exports[`Modal should not be closable by clicking the backdrop if backdrop is set as false 1`] = `
<div
  class="vfm vfm--inset vfm--fixed modal"
  content-transition="[object Object]"
  data-v-2836fdb5=""
  display-directive="if"
  modal-id="modal:test"
  style="z-index: 1000;"
  teleport-to="body"
  z-index-fn="function zIndexFn() {
      /* istanbul ignore next */
      cov_mngcbfuhd().f[2]++;
      cov_mngcbfuhd().s[14]++;
      return 2000;
    }"
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm-fade"
    persisted="false"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-2836fdb5=""
    />
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm"
    persisted="false"
  >
    <div
      aria-expanded="true"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none"
      data-v-2836fdb5=""
      role="dialog"
      style=""
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-scrollable"
        data-v-2836fdb5=""
      >
        
        <div
          class="modal-content"
          data-v-2836fdb5-s=""
        >
          <div
            class="modal-header"
            data-v-2836fdb5-s=""
          >
            <h5
              class="modal-title"
              data-v-2836fdb5-s=""
            >
              
              test modal header
              
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              data-v-2836fdb5-s=""
              type="button"
            />
          </div>
          <div
            class="modal-body"
            data-v-2836fdb5-s=""
          >
            
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            
          </div>
          <!--v-if-->
        </div>
        
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should not show footer when no footer is given 1`] = `
<div
  class="vfm vfm--inset vfm--fixed modal"
  content-transition="[object Object]"
  data-v-2836fdb5=""
  display-directive="if"
  modal-id="modal:test"
  style="z-index: 1000;"
  teleport-to="body"
  z-index-fn="function zIndexFn() {
      /* istanbul ignore next */
      cov_mngcbfuhd().f[2]++;
      cov_mngcbfuhd().s[14]++;
      return 2000;
    }"
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm-fade"
    persisted="false"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-2836fdb5=""
    />
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm"
    persisted="false"
  >
    <div
      aria-expanded="true"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none"
      data-v-2836fdb5=""
      role="dialog"
      style=""
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-scrollable"
        data-v-2836fdb5=""
      >
        
        <div
          class="modal-content"
          data-v-2836fdb5-s=""
        >
          <div
            class="modal-header"
            data-v-2836fdb5-s=""
          >
            <h5
              class="modal-title"
              data-v-2836fdb5-s=""
            >
              
              test modal header
              
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              data-v-2836fdb5-s=""
              type="button"
            />
          </div>
          <div
            class="modal-body"
            data-v-2836fdb5-s=""
          >
            
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            
          </div>
          <!--v-if-->
        </div>
        
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should not show header when no header is given 1`] = `
<div
  class="vfm vfm--inset vfm--fixed modal"
  content-transition="[object Object]"
  data-v-2836fdb5=""
  display-directive="if"
  modal-id="modal:test"
  style="z-index: 1000;"
  teleport-to="body"
  z-index-fn="function zIndexFn() {
      /* istanbul ignore next */
      cov_mngcbfuhd().f[2]++;
      cov_mngcbfuhd().s[14]++;
      return 2000;
    }"
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm-fade"
    persisted="false"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-2836fdb5=""
    />
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm"
    persisted="false"
  >
    <div
      aria-expanded="true"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none"
      data-v-2836fdb5=""
      role="dialog"
      style=""
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-scrollable"
        data-v-2836fdb5=""
      >
        
        <div
          class="modal-content"
          data-v-2836fdb5-s=""
        >
          <!--v-if-->
          <div
            class="modal-body"
            data-v-2836fdb5-s=""
          >
            
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            
          </div>
          <div
            class="modal-footer"
            data-v-2836fdb5-s=""
          >
            
            test modal footer
            
          </div>
        </div>
        
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal should show footer when both footer and ok-text are given 1`] = `
<div
  class="vfm vfm--inset vfm--fixed modal"
  content-transition="[object Object]"
  data-v-2836fdb5=""
  display-directive="if"
  modal-id="modal:test"
  style="z-index: 1000;"
  teleport-to="body"
  z-index-fn="function zIndexFn() {
      /* istanbul ignore next */
      cov_mngcbfuhd().f[2]++;
      cov_mngcbfuhd().s[14]++;
      return 2000;
    }"
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm-fade"
    persisted="false"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-2836fdb5=""
    />
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm"
    persisted="false"
  >
    <div
      aria-expanded="true"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none"
      data-v-2836fdb5=""
      role="dialog"
      style=""
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-scrollable"
        data-v-2836fdb5=""
      >
        
        <div
          class="modal-content"
          data-v-2836fdb5-s=""
        >
          <!--v-if-->
          <div
            class="modal-body"
            data-v-2836fdb5-s=""
          >
            
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            
          </div>
          <div
            class="modal-footer"
            data-v-2836fdb5-s=""
          >
            
            test modal footer
            
          </div>
        </div>
        
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`Modal supports fade effect 1`] = `
<div
  class="vfm vfm--inset vfm--fixed modal"
  content-transition="vfm"
  data-v-2836fdb5=""
  display-directive="if"
  modal-id="modal:test"
  style="z-index: 1000;"
  teleport-to="body"
  z-index-fn="function zIndexFn() {
      /* istanbul ignore next */
      cov_mngcbfuhd().f[2]++;
      cov_mngcbfuhd().s[14]++;
      return 2000;
    }"
>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm-fade"
    persisted="false"
  >
    <div
      class="vfm__overlay vfm--overlay vfm--absolute vfm--inset"
      data-v-2836fdb5=""
    />
  </transition-stub>
  <transition-stub
    appear="false"
    css="true"
    data-v-2836fdb5=""
    name="vfm"
    persisted="false"
  >
    <div
      aria-expanded="true"
      aria-modal="true"
      class="vfm__container vfm--absolute vfm--inset vfm--outline-none"
      data-v-2836fdb5=""
      role="dialog"
      style=""
      tabindex="-1"
    >
      <div
        class="vfm__content modal-dialog modal-dialog-scrollable"
        data-v-2836fdb5=""
      >
        
        <div
          class="modal-content"
          data-v-2836fdb5-s=""
        >
          <div
            class="modal-header"
            data-v-2836fdb5-s=""
          >
            <h5
              class="modal-title"
              data-v-2836fdb5-s=""
            >
              
              test modal header
              
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              data-v-2836fdb5-s=""
              type="button"
            />
          </div>
          <div
            class="modal-body"
            data-v-2836fdb5-s=""
          >
            
            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            
          </div>
          <!--v-if-->
        </div>
        
        <!--v-if-->
      </div>
    </div>
  </transition-stub>
</div>
`;
